Update checkout form

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
-Django==5.0.7
-django-allauth==0.55.0
+Django==3.0.4
+django-allauth==0.50.0
+django-countries==7.2.1
 django-crispy-forms==1.14.0
 oauthlib==3.2.2
 pillow==10.4.0
