--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 asgiref==3.8.1
 boto3==1.12.42
-botocore==1.15.49
+botocore==1.15.42
 chardet==3.0.4
 dj-database-url==0.5.0
-Django==3.0.4
+Django==3.2
 django-allauth==0.50.0
 django-countries==7.2.1
 django-crispy-forms==1.8.1
@@ -14,7 +14,7 @@ idna==2.8
 jmespath==0.10.0
 oauthlib==3.2.2
 Pillow==7.0.0
-psycopg2-binary==2.9.9
+psycopg2==2.9.9
 PyJWT==2.9.0
 python3-openid==3.2.0
 pytz==2024.1
@@ -23,4 +23,4 @@ requests-oauthlib==2.0.0
 s3transfer==0.3.7
 sqlparse==0.5.1
 stripe==3.5.0
-urllib3==1.25.11
+urllib3==1.25.7
